--- a/assistant_with_history.ipynb
+++ b/assistant_with_history.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "# Dictionary to hold chat histories by session_id\n",
     "session_chains = {}\n",
     "\n",
-    "def setup_chat(model: str = \"gpt-3.5-turbo-1106\", session_id: str = \"default\"):\n",
+    "def setup_chat(model, session_id: str = \"default\"):\n",
     "    chat = ChatOpenAI(model=model)\n",
     "\n",
     "    prompt = ChatPromptTemplate.from_messages(\n",
