Quantisation stuff for qat and ptq

--- a/stolen_codes_with_modifications/lab05_PyTorch_Quantisation.ipynb
+++ b/stolen_codes_with_modifications/lab05_PyTorch_Quantisation.ipynb
@@ -25,7 +25,12 @@
         "  - **Q:** What is the purpose of quantization in deep learning?\n",
         "    **A:** Quantization reduces model size and increases inference speed by converting weights and activations from floating point to lower precision (e.g. int8) while trying to preserve accuracy.\n",
         "  - **Q:** How does quantization-aware training differ from post-training quantization?\n",
-        "    **A:** QAT simulates quantization effects during training, which usually results in better accuracy than post-training quantization that only converts a pretrained model.\n"
+        "    **A:** QAT simulates quantization effects during training, which usually results in better accuracy than post-training quantization that only converts a pretrained model.\n",
+        "Quantization-aware training (QAT) integrates the quantization process into the training loop. This means that during training, the network simulates the effects of quantization—such as rounding errors and limited precision—in its forward and backward passes. As a result, the model learns to compensate for these inaccuracies, adjusting its weights to maintain performance under quantized conditions.\n",
+        "\n",
+        "On the other hand, post-training quantization (PTQ) converts a fully-trained, full-precision model to lower precision after training is complete. Since the model wasn't exposed to quantization effects during training, it may not be as robust to the quantization errors introduced during conversion. This often leads to a larger drop in accuracy compared to QAT.\n",
+        "\n",
+        "In summary, QAT usually results in better accuracy because it allows the model to learn and adapt to the quantization errors during training, while PTQ applies quantization retrospectively without any adaptive compensation."
       ]
     },
     {
